--- a/src/view/MainScreen.fxml
+++ b/src/view/MainScreen.fxml
@@ -1,14 +1,75 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="view.MainScreenController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="475.0" prefWidth="868.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.MainScreenController">
+    <children>
+        <SplitPane dividerPositions="0.5" layoutX="4.0" layoutY="98.0" prefHeight="279.0" prefWidth="860.0">
+            <items>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="263.0" prefWidth="291.0">
+                    <children>
+                        <TableView layoutY="-1.0" prefHeight="277.0" prefWidth="425.0">
+                            <columns>
+                                <TableColumn prefWidth="75.0" text="Part Id" />
+                                <TableColumn prefWidth="75.0" text="Part Name" />
+                                <TableColumn prefWidth="75.0" text="Inventory Level" />
+                                <TableColumn prefWidth="75.0" text="Price" />
+                            </columns>
+                            <columnResizePolicy>
+                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                            </columnResizePolicy>
+                        </TableView>
+                    </children>
+                </AnchorPane>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                    <children>
+                        <TableView fixedCellSize="0.0" prefHeight="277.0" prefWidth="425.0">
+                            <columns>
+                                <TableColumn prefWidth="132.0" text="Product Id" />
+                                <TableColumn prefWidth="147.0" text="Product Name" />
+                                <TableColumn prefWidth="75.0" text="Inventory Level" />
+                                <TableColumn prefWidth="75.0" text="Price per Unit" />
+                            </columns>
+                            <columnResizePolicy>
+                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                            </columnResizePolicy>
+                        </TableView>
+                    </children>
+                </AnchorPane>
+            </items>
+        </SplitPane>
+        <Label layoutX="14.0" layoutY="14.0" prefHeight="24.0" prefWidth="302.0" text="Inventory Management System">
+            <font>
+                <Font size="19.0" />
+            </font>
+        </Label>
+        <Label graphicTextGap="6.0" layoutX="14.0" layoutY="75.0" prefHeight="17.0" prefWidth="82.0" text="Parts">
+            <font>
+                <Font size="16.0" />
+            </font>
+        </Label>
+        <Label layoutX="447.0" layoutY="75.0" prefHeight="17.0" prefWidth="92.0" text="Products">
+            <font>
+                <Font size="16.0" />
+            </font>
+        </Label>
+        <Button layoutX="349.0" layoutY="62.0" mnemonicParsing="false" text="Search" />
+        <Button layoutX="780.0" layoutY="62.0" mnemonicParsing="false" text="Search" />
+        <Button layoutX="200.0" layoutY="384.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="59.0" text="Add" />
+        <Button layoutX="280.0" layoutY="384.0" mnemonicParsing="false" text="Modify" />
+        <Button layoutX="363.0" layoutY="384.0" mnemonicParsing="false" text="Delete" />
+        <Button layoutX="707.0" layoutY="384.0" mnemonicParsing="false" text="Modify" />
+        <Button layoutX="780.0" layoutY="384.0" mnemonicParsing="false" text="Delete" />
+        <Button layoutX="630.0" layoutY="384.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="58.0" text="Add" />
+        <TextField layoutX="167.0" layoutY="62.0" />
+        <TextField layoutX="600.0" layoutY="62.0" />
+        <Button layoutX="799.0" layoutY="434.0" mnemonicParsing="false" text="Edit" />
+    </children>
 </AnchorPane>
