--- a/src/view/MainScreen.fxml
+++ b/src/view/MainScreen.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -9,18 +10,18 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="475.0" prefWidth="868.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.MainScreenController">
+<AnchorPane prefHeight="475.0" prefWidth="868.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.MainScreenController">
     <children>
         <SplitPane dividerPositions="0.5" layoutX="4.0" layoutY="98.0" prefHeight="279.0" prefWidth="860.0">
             <items>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="263.0" prefWidth="291.0">
                     <children>
-                        <TableView layoutY="-1.0" prefHeight="277.0" prefWidth="425.0">
+                        <TableView fx:id="partTable" layoutY="-1.0" prefHeight="277.0" prefWidth="425.0">
                             <columns>
-                                <TableColumn prefWidth="75.0" text="Part Id" />
-                                <TableColumn prefWidth="75.0" text="Part Name" />
-                                <TableColumn prefWidth="75.0" text="Inventory Level" />
-                                <TableColumn prefWidth="75.0" text="Price" />
+                                <TableColumn fx:id="partIdColum" prefWidth="75.0" text="Part Id" />
+                                <TableColumn fx:id="partNameColumn" prefWidth="75.0" text="Part Name" />
+                                <TableColumn fx:id="partInventoryColumn" prefWidth="75.0" text="Inventory Level" />
+                                <TableColumn fx:id="partPriceColumn" prefWidth="75.0" text="Price" />
                             </columns>
                             <columnResizePolicy>
                                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -30,12 +31,12 @@
                 </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                     <children>
-                        <TableView fixedCellSize="0.0" prefHeight="277.0" prefWidth="425.0">
+                        <TableView fx:id="productTable" fixedCellSize="0.0" prefHeight="277.0" prefWidth="425.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <columns>
-                                <TableColumn prefWidth="132.0" text="Product Id" />
-                                <TableColumn prefWidth="147.0" text="Product Name" />
-                                <TableColumn prefWidth="75.0" text="Inventory Level" />
-                                <TableColumn prefWidth="75.0" text="Price per Unit" />
+                                <TableColumn fx:id="productIdcolumn" prefWidth="132.0" text="Product Id" />
+                                <TableColumn fx:id="productNameColumn" prefWidth="147.0" text="Product Name" />
+                                <TableColumn fx:id="productInventoryColumn" prefWidth="75.0" text="Inventory Level" />
+                                <TableColumn fx:id="productPriceColumn" prefWidth="75.0" text="Price per Unit" />
                             </columns>
                             <columnResizePolicy>
                                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -60,16 +61,28 @@
                 <Font size="16.0" />
             </font>
         </Label>
-        <Button layoutX="349.0" layoutY="62.0" mnemonicParsing="false" text="Search" />
-        <Button layoutX="780.0" layoutY="62.0" mnemonicParsing="false" text="Search" />
-        <Button layoutX="200.0" layoutY="384.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="59.0" text="Add" />
-        <Button layoutX="280.0" layoutY="384.0" mnemonicParsing="false" text="Modify" />
-        <Button layoutX="363.0" layoutY="384.0" mnemonicParsing="false" text="Delete" />
-        <Button layoutX="707.0" layoutY="384.0" mnemonicParsing="false" text="Modify" />
-        <Button layoutX="780.0" layoutY="384.0" mnemonicParsing="false" text="Delete" />
-        <Button layoutX="630.0" layoutY="384.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="58.0" text="Add" />
-        <TextField layoutX="167.0" layoutY="62.0" />
-        <TextField layoutX="600.0" layoutY="62.0" />
-        <Button layoutX="799.0" layoutY="434.0" mnemonicParsing="false" text="Edit" />
+        <Button fx:id="searchPartButton" layoutX="349.0" layoutY="62.0" mnemonicParsing="false" text="Search" />
+        <Button fx:id="searchProductButton" layoutX="780.0" layoutY="62.0" mnemonicParsing="false" text="Search" />
+        <TextField fx:id="searchPartTextField" layoutX="167.0" layoutY="62.0" />
+        <TextField fx:id="searchProductTextField" layoutX="600.0" layoutY="62.0" />
+      <ButtonBar layoutX="8.0" layoutY="378.0" prefHeight="40.0" prefWidth="425.0">
+        <buttons>
+              <Button fx:id="partAddButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="59.0" text="Add" />
+              <Button fx:id="partModifyButton" mnemonicParsing="false" text="Modify" />
+              <Button fx:id="partDeleteButton" mnemonicParsing="false" text="Delete" />
+        </buttons>
+      </ButtonBar>
+      <ButtonBar layoutX="539.0" layoutY="378.0" prefHeight="40.0" prefWidth="323.0">
+         <buttons>
+              <Button fx:id="productModifyButton" mnemonicParsing="false" text="Modify" />
+              <Button fx:id="productDeleteButton" mnemonicParsing="false" text="Delete" />
+              <Button fx:id="productAddButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="58.0" text="Add" />
+         </buttons>
+      </ButtonBar>
+      <ButtonBar layoutX="662.0" layoutY="421.0" prefHeight="40.0" prefWidth="200.0">
+         <buttons>
+              <Button fx:id="exitButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="71.0" text="Exit" />
+         </buttons>
+      </ButtonBar>
     </children>
 </AnchorPane>
