--- a/src/view/AddPartScreen.fxml
+++ b/src/view/AddPartScreen.fxml
@@ -1,28 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="598.0" prefWidth="481.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.AddPartController">
+<AnchorPane prefHeight="566.0" prefWidth="446.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.AddPartController">
    <children>
-      <AnchorPane layoutX="11.0" layoutY="24.0" prefHeight="50.0" prefWidth="453.0">
+      <AnchorPane layoutX="14.0" layoutY="24.0" prefHeight="50.0" prefWidth="453.0">
          <children>
-            <Label layoutX="14.0" layoutY="14.0" text="Add Part">
+            <Label fx:id="partTitle" layoutX="14.0" layoutY="14.0" text="Add Part">
                <font>
                   <Font size="18.0" />
                </font></Label>
-            <RadioButton layoutX="205.0" layoutY="16.0" mnemonicParsing="false" text="In-House">
+            <RadioButton fx:id="inHouseButton" layoutX="205.0" layoutY="16.0" mnemonicParsing="false" text="In-House">
                <font>
                   <Font size="11.0" />
                </font>
             </RadioButton>
-            <RadioButton layoutX="332.0" layoutY="16.0" mnemonicParsing="false" text="Outsourced">
+            <RadioButton fx:id="outsourcedButton" layoutX="332.0" layoutY="16.0" mnemonicParsing="false" text="Outsourced">
                <font>
                   <Font size="11.0" />
                </font>
             </RadioButton>
+         </children>
+      </AnchorPane>
+      <AnchorPane layoutX="82.0" layoutY="74.0" prefHeight="491.0" prefWidth="318.0">
+         <children>
+            <Label layoutX="34.0" layoutY="33.0" prefHeight="17.0" prefWidth="53.0" text="Part Id" />
+            <Label layoutX="32.0" layoutY="80.0" text="Part Name" />
+            <Label layoutX="36.0" layoutY="130.0" prefHeight="17.0" prefWidth="32.0" text="Inv." />
+            <Label layoutX="36.0" layoutY="185.0" text="Price" />
+            <Label layoutX="39.0" layoutY="246.0" text="Max" />
+            <Label layoutX="38.0" layoutY="320.0" text="Company Name" />
+            <Label layoutX="159.0" layoutY="246.0" prefHeight="17.0" prefWidth="34.0" text="Min" />
+            <Label fx:id="partIdField" layoutX="118.0" layoutY="33.0" prefHeight="17.0" prefWidth="68.0" text="Auto Gen" />
+            <TextField fx:id="partNameField" layoutX="110.0" layoutY="75.0" />
+            <TextField fx:id="invField" layoutX="110.0" layoutY="125.0" />
+            <TextField fx:id="priceField" layoutX="110.0" layoutY="180.0" />
+            <TextField fx:id="maxField" layoutX="78.0" layoutY="241.0" prefHeight="27.0" prefWidth="65.0" />
+            <TextField fx:id="minField" layoutX="206.0" layoutY="241.0" prefHeight="27.0" prefWidth="65.0" />
+            <TextField fx:id="companyNameField" layoutX="143.0" layoutY="315.0" prefHeight="27.0" prefWidth="148.0" />
+            <Button fx:id="saveButton" layoutX="170.0" layoutY="409.0" mnemonicParsing="false" text="Save" />
+            <Button fx:id="cancelButton" layoutX="230.0" layoutY="409.0" mnemonicParsing="false" text="Cancel" />
          </children>
       </AnchorPane>
    </children>
