--- a/src/view/MainScreen.fxml
+++ b/src/view/MainScreen.fxml
@@ -16,7 +16,7 @@
             <items>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="263.0" prefWidth="291.0">
                     <children>
-                        <TableView fx:id="partTable" layoutY="-1.0" prefHeight="277.0" prefWidth="425.0">
+                        <TableView fx:id="partsTableView" layoutY="-1.0" prefHeight="277.0" prefWidth="425.0">
                             <columns>
                                 <TableColumn fx:id="partIdColum" prefWidth="75.0" text="Part Id" />
                                 <TableColumn fx:id="partNameColumn" prefWidth="75.0" text="Part Name" />
@@ -31,7 +31,7 @@
                 </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                     <children>
-                        <TableView fx:id="productTable" fixedCellSize="0.0" prefHeight="277.0" prefWidth="425.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <TableView fx:id="productTableView" fixedCellSize="0.0" prefHeight="277.0" prefWidth="425.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                             <columns>
                                 <TableColumn fx:id="productIdcolumn" prefWidth="132.0" text="Product Id" />
                                 <TableColumn fx:id="productNameColumn" prefWidth="147.0" text="Product Name" />
@@ -67,7 +67,7 @@
         <TextField fx:id="searchProductTextField" layoutX="600.0" layoutY="62.0" />
       <ButtonBar layoutX="8.0" layoutY="378.0" prefHeight="40.0" prefWidth="425.0">
         <buttons>
-              <Button fx:id="partAddButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="59.0" text="Add" onAction="#addPart" />
+              <Button fx:id="partAddButton" mnemonicParsing="false" onAction="#addPart" prefHeight="27.0" prefWidth="59.0" text="Add" />
               <Button fx:id="partModifyButton" mnemonicParsing="false" text="Modify" />
               <Button fx:id="partDeleteButton" mnemonicParsing="false" text="Delete" />
         </buttons>
@@ -76,12 +76,12 @@
          <buttons>
               <Button fx:id="productModifyButton" mnemonicParsing="false" text="Modify" />
               <Button fx:id="productDeleteButton" mnemonicParsing="false" text="Delete" />
-              <Button fx:id="productAddButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="58.0" text="Add" />
+              <Button fx:id="productAddButton" mnemonicParsing="false" onAction="#addProductButton" prefHeight="27.0" prefWidth="58.0" text="Add" />
          </buttons>
       </ButtonBar>
       <ButtonBar layoutX="662.0" layoutY="421.0" prefHeight="40.0" prefWidth="200.0">
          <buttons>
-              <Button fx:id="exitButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="71.0" text="Exit" onAction="#handleExit" />
+              <Button fx:id="exitButton" mnemonicParsing="false" onAction="#handleExit" prefHeight="27.0" prefWidth="71.0" text="Exit" />
          </buttons>
       </ButtonBar>
     </children>
