--- a/src/view/AddPartScreen.fxml
+++ b/src/view/AddPartScreen.fxml
@@ -34,7 +34,7 @@
             <Label layoutX="36.0" layoutY="130.0" prefHeight="17.0" prefWidth="32.0" text="Inv." />
             <Label layoutX="36.0" layoutY="185.0" text="Price" />
             <Label layoutX="39.0" layoutY="246.0" text="Max" />
-            <Label layoutX="38.0" layoutY="320.0" text="Company Name" />
+            <Label fx:id="machineOrCompany" layoutX="38.0" layoutY="320.0" text="Company Name" />
             <Label layoutX="159.0" layoutY="246.0" prefHeight="17.0" prefWidth="34.0" text="Min" />
             <Label fx:id="partIdField" layoutX="118.0" layoutY="33.0" prefHeight="17.0" prefWidth="68.0" text="Auto Gen" />
             <TextField fx:id="partNameField" layoutX="110.0" layoutY="75.0" />
