--- a/src/view/AddPartScreen.fxml
+++ b/src/view/AddPartScreen.fxml
@@ -43,8 +43,8 @@
             <TextField fx:id="maxField" layoutX="78.0" layoutY="241.0" prefHeight="27.0" prefWidth="65.0" />
             <TextField fx:id="minField" layoutX="206.0" layoutY="241.0" prefHeight="27.0" prefWidth="65.0" />
             <TextField fx:id="companyNameField" layoutX="143.0" layoutY="315.0" prefHeight="27.0" prefWidth="148.0" />
-            <Button fx:id="saveButton" layoutX="170.0" layoutY="409.0" mnemonicParsing="false" text="Save" />
-            <Button fx:id="cancelButton" layoutX="230.0" layoutY="409.0" mnemonicParsing="false" text="Cancel" />
+            <Button fx:id="saveButton" layoutX="170.0" layoutY="409.0" mnemonicParsing="false" onAction="#savePart" text="Save" />
+            <Button fx:id="cancelButton" layoutX="230.0" layoutY="409.0" mnemonicParsing="false" onAction="#handelCancel" text="Cancel" />
          </children>
       </AnchorPane>
    </children>
